css/styles.css
/* ... */
*, *:before, *:after {
  box-sizing: border-box;
}
/* make a commit to repository */

/* Third step: define typography (mobile-first approach) */
/* Look at the fonts and try to minimize the variation number of different fonts */

/* Typography */
html {
  font-size: 62.5%;
}

body {
  font-family: Inter, Arial, Helvetica, sans-serif;
  font-size: 2.4rem;
  line-height: 1.5;
  color: var(--color-body);
}

h1,
h2,
h3 {
  color: var(--color-heading);
  margin-bottom: 1rem;
  line-height: 1.1;
}

h1 {
  font-size: 7rem;
}

h2 {
  font-size: 4rem;
}

h3 {
  font-size: 2.8rem;
}

p {
  margin-top: 0;
}

.heading-white {
  color: #fff;
}

.heading-line-height {
  line-height: 1.3;
}

.large__image {
  width: 100%;
}

@media screen and (min-width: 1024px) {
  body {
    font-size: 1.8rem;
  }

  h1 {
    font-size: 8rem;
  }

  h3 {
    font-size: 2.4rem;
  }
}

/* Fourth step: make first reusable component - link "LEARN MORE->" */

/* Links */
a {
  text-decoration: none;
}

.link-arrow {
  font-size: 2rem;
  font-weight: 700;
  text-transform: uppercase;
  color: var(--color-accent);
}

.link-arrow:after {
  margin-left: 0.25rem;
  content: "-->";
  transition: margin-left 0.3s;
}

/* target element 'after' in 'hover' effect of .link-arrow */
.link-arrow:hover::after {
  margin-left: 0.75rem;
}

@media screen and (min-width: 1024px) {
  .link-arrow {
    font-size: 1.5rem;
  }
}

/* Badges */
.badge {
  border-radius: var(--border-radius);
  font-size: 2rem;
  font-weight: bold;
  padding: 0.5rem 2rem;
  text-align: center;
  white-space: nowrap;
}

.badge--primary {
  /*BEM*/
  background-color: var(--color-primary);
  color: #fff;
}

.badge--secondary {
  background-color: var(--color-secondary);
  color: #fff;
}

.badge--small {
  font-size: 1.6rem;
  padding: 0.5rem 1rem;
}

@media screen and (min-width: 1024px) {
  .badge--small {
    font-size: 1.2rem;
  }
}


/* Lists */
.list {
  list-style: none;
  padding-left: 0;
}

/*we do not want css to know about HTML tags*/
.list--inline .list__item {
  display: inline-block;
  margin-right: 2rem;
}

.list--tick {
  list-style-image: url(../images/tick.svg);
  padding: 0 3rem;
  margin: 1.5rem 0;
}

.list--tick .list__item {
  padding-left: 1rem;
  margin-bottom: 1.5rem;
  letter-spacing: 0.1rem;
}

.list__item-primary {
  color: var(--color-heading);
}


@media screen and (min-width:1024px) {
  .list--tick .list__item {
    padding-left: 0.5rem;
  }
}


/* Icons */
.icon {
  width: 40px;
  height: 40px;
}
 
.icon--primary {
  fill: var(--color-primary);
}

.icon--white {
  fill: #fff;
}

.icon--gray {
  fill: var(--color-body);
}

.icon-container {
  width: 64px;
  height: 64px;
  display: inline-flex;
  background-color: #f3f9fa;
  border-radius: 50%;
  align-items: center;
  justify-content: center;
}

/* Buttons */

.button {
  width: 100%;
  border: 0;
  border-radius: var(--border-radius);
  font-size: 1.8rem;
  text-transform: uppercase;
  font-weight: 600;
  cursor: pointer;
  color: #fff;
  padding: 1.5rem;
  white-space: nowrap;
}

.button--primary {
  background-color: #fff;
  color: var(--color-heading);
  border: 2px solid var(--color-heading);
}

.button--primary:hover {
  background-color: var(--color-heading);
  color: #fff;
}

.button--secondary {
  background-color: var(--color-secondary);
}

.button--secondary:hover {
background-color: hsl(189deg, 100%, 45%);
}

.button--accent {
  background-color: var(--color-accent);
}

.button--accent:hover {
  background-color: hsl(12deg, 100%, 45%);
}

@media screen and (min-width:1024px) {
  .button {
    font-size: 1.5rem;
  }
}


/* Inputs */

.domain-input {
  outline: 0;
  font-size: 1.8rem;
  border: 0;
  border-radius: var(--border-radius);
  overflow: hidden;
  color: var(--color-heading);
}

.domain-input::placeholder {
  color: hsl(251deg, 11%, 80%);
}

.input-group {
  margin: auto;
  display: flex;
  border-radius: var(--border-radius);
  padding: 0.25rem 0.5rem;
  width: 95%;
  box-shadow: 0 0 30px 15px rgb(236, 231, 231);
}

.input-group .domain-input {
  margin-left: 1rem;
  flex-grow: 1;
}

.input-group .button {
  width: auto;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1rem 2rem;
}

.button .icon {
  width: 20px;
  fill: #fff;
  margin-right: 0.5rem;
}

@media screen and (min-width:1024px) {
  .input-group {
    width: 43%;
  }

  .input-group .button {
    width: 35%;
  }

  .domain-input {
    font-size: 1.5rem;
  }
}


/* Cards */
.card {
  border-radius: 7px;
  box-shadow: 0 0 20px 10px #e2e0e9;
  overflow: hidden;
  transition: transform 0.2s;
}

.card:hover {
  transform: scale(1.05);
}

.card__header,
.card__body {
  padding: 2rem;
}

.card__header {
  color: #fff;
}

.card--primary .card__header{
  background-color: var(--color-primary);
}

.card--secondary .card__header {
  background-color: var(--color-secondary);
}

.card--primary .badge--primary {
  background-color: hsl(214deg, 100%, 50%);
}

.card--secondary .badge--secondary {
  background-color: hsl(189deg, 100%, 45%);
}

/* Plan */
.plan {
  margin: 50px auto;
  width: 90%;
  max-width: 450px;
}

.plan__name {
  margin: 0;
  color: #fff;
  font-size: 2.4rem;
}

.plan__price {
  font-size: 6rem;
}

.plan__description {
  white-space: nowrap;
  font-size: 2rem;
  margin-top: 1rem;
  margin-bottom: 0;
}

.plan .card__body {
  font-size: 2rem;
}

.plan--popular .card__header {
  position: relative;
}

.plan--popular .card__header::before {  /*сделали так что если хочешь сделать карточку popular - Нужно всего лишь указать класс .plan--popular*/
  content: url(../images/popular.svg);
  position: absolute;
  right: 5%;
  top: -10px;
  display: inline-block;
  width: 45px;
}

.plan--popular .list {
  margin-bottom: 4rem;
}


@media screen and (min-width:1024px) {
  .plan {
    width: 350px;
    margin: 50px 10px;
  }

  .plan__name {
    font-size: 2rem;
  }

  .plan_price {
    font-size: 5rem;
  }

  .plan__description {
    font-size: 1.7rem;
  }
}
/* ... */

